kubernetes/apps/flux-system/flux-operator/instance/github/webhooks/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  annotations:
    external-dns.kubernetes.io/target: "external.${CLUSTER_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "external.${CLUSTER_DOMAIN}"
spec:
  hostnames: ["flux-webhook.${CLUSTER_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
